--- a/fichier.html
+++ b/fichier.html
@@ -17,6 +17,8 @@ May 11, 2016, <strong>Gorius</strong> </blockquote>
 <p class="first-paragraph">In nature, <strong class="good">Good</strong> & Evil do not exist. The Universe itself is neither <strong class="good">good</strong> nor <strong class="bad">bad</strong>, but a potential in permanent development.</p>
 
 <p>In life, there are 4 types of people.</p>
+
+<section class="bloc-img-1">
 <ul>
  <li class="bien">people who think the Internet is <strong class="good">good</strong>,
  <li class="mal">people who think the Internet is <strong class="bad">evil</strong>,
@@ -24,28 +26,34 @@ May 11, 2016, <strong>Gorius</strong> </blockquote>
  <li>people who don't think about it.
 </ul>
 
-<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" title="A man who clean a window" alt="A man who clean a window">
+<figure>
+<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" title="A man who clean a window"  alt="A man who clean a window">
+<figcaption>A man who clean a window</figcaption>
+</figure>
+</section>
 
-
+<section class="bloc-img-2">
 <p>Up in space, turning around, looking at the earth’s face. From that rock’s perspective on Mars or that gaz opinion from Jupiter, nothing cares about your problems. Up there, it’s just not serious, and there’s no such thing as an issue.
 Down here, the only reality is the one inside our brain. Nothing exists if the brain doesn’t think it. Nothing exists neither if our senses don’t transmit the message. That means that if we mis sense, our reality changes. That’s possible because our perception is limited : you can’t see at 360 degrees for example. If we mis translate the message, our reality changes. If we think it in a way, our reality changes depending on that way. Therefore, if we can change reality that much, everything’s fake.
 They’re proofs to that. Fall in love with someone and you’ll see that person as divine. Pull yourself out of that grip and the divine falls from clouds to solid ground, revealing him or herself differently. But the person is the same, you just changed your mind. Everything works like that : it’s not just that you can make your world, it’s that you passively do it anyway.
 </p>
 
 <figure>
-<img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg" alt="what does he think about it?">
+<img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg" title="what does he think about it?" alt="what does he think about it?">
 <figcaption>Jelly Doughnut Rock on Mars</figcaption>
 </figure>
+</section>
 
 <h2>The story</h2>
 
+<section class="bloc-img-3">
 <figure>
-    <img src=https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg alt="The Old Chinese Farmer">
+    <img src=https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg title="The Old Chinese Farmer" alt="The Old Chinese Farmer">
     <figcaption>The Old Chinese Farmer</figcaption>
 </figure>
 
 
-<p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. <br>
+<p class="chinese-dial">Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. <br>
 They said, <q class="villager">We are so sorry to hear your horse has run away. This is most unfortunate.</q> <br>
 The farmer said, <q class="farmer">Is it <strong class="good">good</strong>? Is it <strong class="bad">bad</strong>? I don't know.</q><br> 
 The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q class="villager">Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q><br>
@@ -57,6 +65,7 @@ The whole process of nature is an integrated process of immense complexity, and 
  because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of <strong class="good">good</strong> fortune.
 <a href="https://fr.wikipedia.org/wiki/Alan_Watts" title="Go to wiki" target="_blank">Alan Watts</a>
 </p>
+</section>
 
 <p>Here is this dialog in the form of a table</p>
 
